# VIAME

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  .uncrustify.cfg  CITATION.cff  CMakeLists.txt  CONTRIBUTING.rst  CTestConfig.cmake  CTestCustom.cmake.in  Dockerfile  Doxyfile.in  LICENSE.txt  License.txt  README.md  README.rst  RELEASE_NOTES.md  create_mosaic.py  docker-compose.yml  dockerfile  log4cplus.properties  log4cxx.properties  vistk-config-install.cmake.in  vistk-config.cmake.in
arrows/: CMakeLists.txt  ReadMe.rst  algorithm_plugin_interface_macros.h
arrows/DBow2/: BowVector.cxx  BowVector.h  CMakeLists.txt  DBoW2.h  FORB.cxx  FeatureVector.h  Random.cxx  Random.h  ScoringObject.cxx  ScoringObject.h  TemplatedDatabase.h  TemplatedVocabulary.h  Timestamp.cxx  bag_of_words_matching.cxx  bag_of_words_matching.h  register_algorithms.cxx
arrows/algorithms/: CMakeLists.txt  algorithm_plugin_interface.h  algorithm_plugin_interface_macros.h
arrows/burnout/: CMakeLists.txt  burnout_detector.cxx  burnout_detector.h  burnout_image_enhancer.cxx  burnout_image_enhancer.h  burnout_pixel_classification.cxx  burnout_pixel_classification.h  burnout_track_descriptors.cxx  burnout_track_descriptors.h  register_algorithms.cxx
arrows/ceres/: CMakeLists.txt  algorithm_plugin_interface.cxx  bundle_adjust.cxx  bundle_adjust.h  camera_options.cxx  (+15 more)
conf/: .gitattributes  CMakeLists.txt  CTestCustom.cmake.in  dashboard.ctest.in  sprokit-config-build.cmake.in  sprokit-config-common.cmake.in  sprokit-config-install.cmake.in  sprokit-config.cmake.in  sprokit-macro-configure.cmake  sprokit-macro-fixes.cmake  sprokit-macro-python.cmake  sprokit-macro-targets.cmake  sprokit-macro-tests.cmake  vistk-config-install.cmake.in  vistk-config.cmake.in  vistk-macros.cmake.in  vistk.pc.in
config/: CMakeLists.txt  ceres_bundle_adjuster.conf  config_block.h  config_block_io.cxx  config_block_io.h  config_block_io_exception.h  config_util.h  core_image_list_video_input.conf  core_video_input_image_list.conf  core_video_input_image_pos_list.conf  cuda_integrate_depth_maps.conf  ffmpeg_video_input.conf  mvg_hierarchical_bundle_adjuster.conf  mvg_initialize_cameras_landmarks.conf  mvg_initialize_cameras_landmarks_basic.conf  super3d_depth_map.conf
configs/: CMakeLists.txt  aggregate_plots.py  check_formatting.py  database_tool.py  extract_video_frames.py  generate_detection_plots.py  ingest_video.py  launch_annotation_gui.py  launch_annotation_interface.py  launch_query_gui.py  launch_search_interface.py  launch_timeline_interface.py  launch_track_viewer.py  parse_flags.sh  process_video.py  score_results.py
examples/: CMakeLists.txt  README.rst  annotation_converter.pl  detector3.cxx  detector4.cxx  display_annotation.pipe  habcam.csv
extras/: CMakeLists.txt
kwiver/: CMakeLists.txt  homography.cxx  homography_f2f.cxx  homography_f2w.cxx  image_container.h  kwiver-config.h  timestamp.cxx  timestamp.h  types.h  vector.cxx
kwiver_util/: CMakeLists.txt  corner_points.h  kwiver_type_traits.h  sprokit_type_traits.h  trait_utils.h
pipelines/: CMakeLists.txt  camtrawl_pipeline.pipe  hello_world_detector.pipe  multi_cnn_detector.pipe  scallop_tk_detector.pipe
plugins/: CMakeLists.txt  register_algorithms.h  scallop_detector.cxx  scallop_detector.h  types.py
python/: CMakeLists.txt  check_imports.py  requirements.txt  setup.py
sprokit/: CMakeLists.txt  LICENSE  ReadMe.rst
src/: CMakeLists.txt
tests/: CMakeLists.txt  conftest.py  test_common.h  test_eigen.h  test_gtest.h  test_math.h  test_random_point.h  test_scene.h  test_tmpfn.h  test_tracks.h
tools/: CMakeLists.txt  add_segmentations.py  analyze_match_failures.py  applet_context.h  applet_registrar.h  build_itq_index.py  build_pixel_mosaic.py  calibrate_cameras.py  check_formatting.py  check_gpu_usability.py  compute_depth.py  compute_disparity.py  config_explorer.cxx  config_explorer.h  convert_cam_format.py  convert_cam_ocv_to_npz.py  convert_cam_zed_to_npz.py  convert_itk_h5_transform.py  create_mosaic.py  csv.cxx  csv.h  cxxopts.hpp  database_tool.py  detect_prior_coverage.py  detect_site_revisits.py  dump_klv-sample.config  dump_klv.cxx  dump_klv.h  evaluate_loop_closures.py  extract_video_frames.py  generate_detection_plots.py  generate_nn_index.py  get_configs.cxx  grayscale.pipe  kwiver_applet.cxx  kwiver_applet.h  kwiver_tool_runner.cxx  launch_annotation_interface.py  launch_search_interface.py  launch_timeline_interface.py  (+22 more)
track_oracle/: .#CMakeLists.txt  CMakeLists.txt  README.markdown  element_descriptor.h  element_store.h  element_store_base.h  element_store_instantiation.h  event_adapter.cxx  event_adapter.h  file_format_base.cxx  file_format_base.h  file_format_manager.h  file_format_schema.h  file_format_type.cxx  file_format_type.h  kwiver_io_base.h  kwiver_io_base.txx  kwiver_io_base_data_io.h  kwiver_io_base_instantiation.h  kwiver_io_helpers.h  schema_algorithm.cxx  schema_algorithm.h  schema_factory.cxx  schema_factory.h  state_flags.cxx  state_flags.h  test_template.cxx  track_base.h  track_base_impl.cxx  track_base_impl.h  track_field.h  track_field.txx  track_field_base.cxx  track_field_base.h  track_field_functor.h  track_field_functor_library.h  track_field_host.h  track_field_instantiation.h  track_field_io_proxy.h  track_field_io_proxy.txx  (+15 more)
vital/: CMakeLists.txt  ReadMe.rst  algorithm.cxx  algorithm.h  algorithm.txx  algorithm_capabilities.cxx  algorithm_capabilities.h  algorithm_plugin_manager.cxx  algorithm_plugin_manager.h  algorithm_plugin_manager_paths.h.in  algorithm_plugin_manager_static.cxx  algorithm_plugin_manager_static.h  any.h  attribute_set.cxx  attribute_set.h  bitflags.h  camera.cxx  camera.h  camera_intrinsics.cxx  camera_intrinsics.h  camera_io.cxx  camera_io.h  camera_map_io.cxx  camera_map_io.h  context.cxx  context.h  covariance.h  descriptor.h  descriptor_set.h  eigen_io.h  exceptions.h  feature.cxx  feature.h  feature_set.h  geo_reference_points_io.cxx  geo_reference_points_io.h  homography.h  homography_f2f.h  homography_f2w.h  image.cxx  (+38 more)
(+9133 files in other folders)
